adicionando imagem, tabela e form

--- a/index.html
+++ b/index.html
@@ -51,5 +51,29 @@
 
 <!--Link com tooltip-->
 <a href="#" title="Clique aqui para saber maisinformações"></a><br>
+
+<!--imagem-->
+<img src="img/images.png" alt="logo angular">
+
+<table border="1">
+    <thead>
+        <tr>
+            <th>Aluno</th>
+            <th>Matematica</th>
+            <th>Ciências</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>Ana</td>
+            <td>8.5</td>
+            <td>8.3</td>
+        </tr>
+    </tbody>
+    <tfoot>
+        <tr>
+            <td colspan="3">Total de pessoas: 3</td>
+        </tr>
+    </tfoot>
 </body>
 </html>
